--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,25 @@ APP_SECRET=4e6aa990e8735f4a3e780f3c31726d1c
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+# Key paths should be relative to the project directory
+JWT_PRIVATE_KEY_PATH=config/jwt/private.pem
+JWT_PUBLIC_KEY_PATH=config/jwt/public.pem
+JWT_PASSPHRASE=5f24e53f6b14ad8400aceafb87f3cebf
+###< lexik/jwt-authentication-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost:?[0-9]*$
+###< nelmio/cors-bundle ###
+
+ENABLE_LINES_EMAIL=0
+ENABLE_LINES_SLACK=0
+ENABLE_LINES_ROCKET_CHAT=0
