--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,30 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "api-platform/api-pack": "^1.0",
+        "api-platform/core": "^2.1",
+        "doctrine/annotations": "^1.6",
+        "doctrine/doctrine-bundle": "^1.8",
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "doctrine/doctrine-migrations-bundle": "^1.3",
+        "doctrine/orm": "^2.6",
+        "indragunawan/api-rate-limit-bundle": "^0.2.1",
+        "lexik/jwt-authentication-bundle": "^2.4",
+        "nelmio/cors-bundle": "^1.5",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/security-bundle": "^4.0",
+        "symfony/web-server-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "dama/doctrine-test-bundle": "^4.0",
+        "symfony/browser-kit": "^4.0",
+        "symfony/dotenv": "^4.0",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^4.0"
     },
     "config": {
         "preferred-install": {
