--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,6 +1,11 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    lines:
+        email: '%env(ENABLE_LINES_EMAIL)%'
+        slack: '%env(ENABLE_LINES_SLACK)%'
+        rocket_chat: '%env(ENABLE_LINES_ROCKET_CHAT)%'
+    locale: 'en'
 
 services:
     # default configuration for services in *this* file
@@ -17,10 +22,10 @@ services:
         resource: '../src/*'
         exclude: '../src/{Entity,Migrations,Tests}'
 
-    # controllers are imported separately to make sure services can be injected
+    # actions are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller'
+    App\Action\:
+        resource: '../src/Action'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
