Implementing some minor tweaks

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -30,4 +30,4 @@ framework:
         #app: cache.adapter.apcu
 
     serializer:
-        name_converter: 'serializer.name_converter.camel_case_to_snake_case'
+        name_converter:
