--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.6",
         "indragunawan/api-rate-limit-bundle": "^0.2.1",
         "lexik/jwt-authentication-bundle": "^2.4",
+        "nelmio/api-doc-bundle": "dev-master#92f3eb633b614808525166f1453d20a1b5a9467d",
         "nelmio/cors-bundle": "^1.5",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
