--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,3 +1,12 @@
 api_platform:
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
+
+    enable_nelmio_api_doc: true
+    enable_swagger: true
+    enable_swagger_ui: false
+    swagger:
+        api_keys:
+            apiKey:
+                name: 'Authorization'
+                type: 'header'
