Implemening user's lines and channels

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -30,4 +30,5 @@ framework:
         #app: cache.adapter.apcu
 
     serializer:
-        name_converter:
+        enabled: true
+        enable_annotations: true
