--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "nelmio/api-doc-bundle": "dev-master#92f3eb633b614808525166f1453d20a1b5a9467d",
         "nelmio/cors-bundle": "^1.5",
         "symfony/console": "^4.0",
+        "symfony/event-dispatcher": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
