--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -6,6 +6,4 @@ nelmio_api_doc:
             version: false
     routes: # to filter documented routes
         path_patterns:
-            - ^(?!/api/doc)
-            - ^(?!/api/docs)
-            - ^(?!/api/{index})$
+            - ^/api/(jwt|channel|line)
