--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^4.0",
+        "league/factory-muffin": "^3.0",
+        "league/factory-muffin-faker": "^2.0",
         "symfony/browser-kit": "^4.0",
         "symfony/dotenv": "^4.0",
         "symfony/maker-bundle": "^1.0",
