--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,7 @@ security:
             stateless: true
             anonymous: true
             provider: default
-            form_login:
+            json_login:
                 check_path:               /api/jwt/token
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
